--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+firebase.js
 .DS_Store
 node_modules
 /dist
@@ -19,3 +20,6 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
+
+#Electron-builder output
+/dist_electron
